--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -6,6 +6,7 @@
     padding-top: 200px;
     padding-bottom: 0px; 
     display: flex;
+    
 }
 .Circle:hover{
     color: rgb(11, 11, 11);
@@ -60,16 +61,16 @@
     background-color: #eb0906;
 } */
 .neon{
-    color: #eb0906;
+    /* color: #eb0906; */
     text-shadow:
       0 0 5px #fff,
       0 0 10px #fff,
       0 0 20px #fff,
-      0 0 40px #0ff,
-      0 0 80px #0ff,
-      0 0 90px #0ff,
-      0 0 700px #0ff,
-      0 0 120px #0ff;
+      0 0 40px rgb(141, 202, 202),
+      0 0 80px rgb(155, 164, 164),
+      0 0 90px rgb(149, 208, 208),
+      0 0 700px rgb(124, 143, 143),
+      0 0 120px rgb(130, 137, 137);
 }
 span{
     font-size:25px;
@@ -77,27 +78,32 @@ span{
     text-transform: uppercase; 
 }
 .HashCode{
-    color: rgb(250, 8, 8);
-    padding-left: 250px;
+    /* color: rgb(250, 8, 8); */
+    padding-left: 170px;
     padding-right: 100px;
     padding-top: 0px;
     padding-bottom: 0px; 
     display: flex;
+    
+    
 }
 .HashCode .HashCodeBlockChain{
-    /* padding-left: 300px;
-    padding-right: 0px;
-    padding-top: 0px;
-    padding-bottom: 0px; */
+    
     margin: 5px 5px 5px 5px;
+    padding-right: 70px;
+    padding-left: 30px;
+    
+   
+    
 
 }
 .HashCode .HashCodeExcel{
-    /* padding-left: 310px;
-    padding-right: 250px;
-    padding-top: 00px;
-    padding-bottom: 0px; */
-    padding-left: 150px;
+    
+    padding-left: 15px;
+    padding-right: 30px;
     margin: 5px 5px 5px 5px;
+    
+    
+    
 
 }
