--- a/src/index.css
+++ b/src/index.css
@@ -27,9 +27,9 @@ header{
   /* box-shadow: 2px 2.5px 3px 3px rgb(243, 241, 241); */
   opacity: 0.4;
 }
-header .logo{
-  font-size: 40px ;
-  color: rgb(247, 24, 147);
+header .logo h5{
+  font-size: 30px ;
+  color: rgb(234, 233, 234);
   padding-right: 320px;
   padding-bottom: 40px;
   transition: 0.3s;
@@ -38,16 +38,26 @@ header .logo{
   
 }
 
-header .logo:hover{
-  color: rgb(86, 182, 251);
+header .logo h5:hover{
+  color: rgb(46, 155, 183);
   font-size: 50px;
+  text-shadow:
+      0 0 5px #fff,
+      0 0 10px #fff,
+      0 0 20px #fff,
+      0 0 40px rgb(141, 202, 202),
+      0 0 80px rgb(27, 241, 241),
+      0 0 90px rgb(37, 202, 202),
+      0 0 700px rgb(3, 239, 239),
+      0 0 120px rgb(110, 204, 204);
 }
+
 header .logo img{
 
   margin-top: 40px;
   height: 60px;
   width: 60px;
-  color: rgb(2, 103, 17);
+  color: rgb(228, 228, 228);
   border-radius: 90px;
   padding-top: 12px;
 }
@@ -78,7 +88,7 @@ header .display-menu{
 .display-menu .menu:hover{
   text-decoration: solid;
   font-size: 21px;
-  color: aqua;
+  color: rgb(236, 48, 19);
 }
 .display-menu .menu:hover > :not(:hover){
   opacity: 0.6;
