Made changes in UI of About

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -63,8 +63,8 @@
 .neon{
     /* color: #eb0906; */
     text-shadow:
-      0 0 5px #fff,
-      0 0 10px #fff,
+      0 0 5px #050505,
+      0 0 10px #646363,
       0 0 20px #fff,
       0 0 40px rgb(141, 202, 202),
       0 0 80px rgb(155, 164, 164),
